--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Createx</title>
     <link rel="icon" href="image/svg/icon-x.svg">
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <link rel="stylesheet" href="./styles/main.scss">
     <script src="scripts/main.js" defer></script>
   </head>
@@ -223,7 +224,62 @@
     </div>
 
     <header class="page__header header">
-      lorem556
+      <div class="header__carousel-header carousel-header">
+        <div class="carousel-header__cell">
+          <img
+            src="image/header-image.png"
+            alt="header image"
+            class="carousel-header__img"
+          >
+        </div>
+        <div class="carousel-header__cell">
+          <img
+            src="image/header-image.png"
+            alt="header image"
+            class="carousel-header__img"
+          >
+        </div>
+        <div class="carousel-header__cell">
+          <img
+            src="image/header-image.png"
+            alt="header image"
+            class="carousel-header__img"
+          >
+        </div>
+        <div class="carousel-header__cell">
+          <img
+            src="image/header-image.png"
+            alt="header image"
+            class="carousel-header__img"
+          >
+        </div>
+      </div>
+
+      <div class="header__container">
+        <div class="header__content">
+          <h1 class="header__title">
+            CREATE<span>X</span><br>
+            CONSTRUCTION
+          </h1>
+
+          <div class="header__description">
+            Cras ultrices leo vitae non viverra. Fringilla nisi quisque consequat, dignissim vitae proin ipsum sed. Pellentesque nec turpis purus eget pellentesque integer ipsum elementum felis.
+          </div>
+
+          <div class="header__buttons">
+            <a href="#about" class="button button--secondary header__button-1">
+              Learn more about us
+            </a>
+
+            <a href="#submit" class="button button--primary header__button-2">
+              SUBMIT REQUEST
+            </a>
+          </div>
+        </div>
+      </div>
     </header>
+
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+
   </body>
 </html>
